[tool.poetry]
name = "rag-chat"
version = "0.1.0"
description = ""
authors = ["Wonjae Lee <wonjae.lee.2@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
haystack-ai = "^2.0.0b8"
fastapi = "^0.110.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
